# bitboards

./: README.md
bitboard/: Cargo.toml
bitboard/benches/: alignments.rs  bench_xor.rs  pdep_u128.rs  pdep_u64.rs  pext_u128.rs  pext_u64.rs  pop_lsb.rs  pop_lsb_u128.rs  sliding_attacks.rs
bitboard/examples/: bitboard12x11.rs  bitboard5x20.rs  bitboard8x8.rs  runtime_large.rs  runtime_medium.rs  runtime_small.rs
bitboard/src/: lib.rs  utils.rs
bitboard/src/runtime/: large_bitboard.rs  medium_bitboard.rs  mod.rs  small_bitboard.rs
bitboard/tests/: alignments.rs  bitops.rs  shift.rs  static_bitboard.rs
bitboard_proc_macro/: Cargo.toml
bitboard_proc_macro/src/: bit_ops.rs  common_impls.rs  lib.rs
